--- a/templates/Dashboard/CarInfo/dash_car_add.html
+++ b/templates/Dashboard/CarInfo/dash_car_add.html
@@ -25,7 +25,7 @@
     <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
 					<div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
 						<h3 class="mb-4">Add new car</h3>
-						<form action="/car_add_create" method="post">
+						<form action="/car_add_create" method="post" enctype="multipart/form-data">
 							<div class="row">
 								<div class="col-md-6">
 									<div class="form-group">
