--- a/templates/Cars/cars.html
+++ b/templates/Cars/cars.html
@@ -35,7 +35,7 @@
                 </p>
               </div>
               <div class="d-flex justify-content-around mb-3">
-                <button class="btn btn-primary"><a href="/cars_detail">View</a></button>
+                <a href="/cars_detail?id={{car.id}}"><button class="btn btn-primary">View</button></a>
               </div>
             </div>
           </div>
