--- a/templates/Dashboard/CustomerInfo/cust_edit.html
+++ b/templates/Dashboard/CustomerInfo/cust_edit.html
@@ -31,37 +31,38 @@
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Full Name</label>
-								  	<input type="text" class="form-control" name="name" value="{{customer.name}}">
+								  	<input type="text" class="form-control" name="name" value="{{customer.name}}" required>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Username</label>
-								  	<input type="text" class="form-control" name="username" value="{{user.username}}">
+								  	<input type="text" class="form-control" name="username" value="{{user.username}}" required>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Email</label>
-								  	<input type="text" class="form-control" name="email" value="{{customer.email}}">
+								  	<input type="text" class="form-control" name="email" value="{{customer.email}}" required>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Phone number</label>
-								  	<input type="text" class="form-control" name="phone_number" value="{{customer.phone_number}}">
+								  	<input type="text" class="form-control" name="phone_number" value="{{customer.phone_number}}" required>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
 								  	<label>Address</label>
-								  	<input type="text" class="form-control" name="address" value="{{customer.address}}">
+								  	<input type="text" class="form-control" name="address" value="{{customer.address}}" required>
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Password</label>
-								  	<input type="password" class="form-control" name="password" value="{{user.password}}">
+								  	<input type="password" class="form-control" name="password">
+								  	<input type="hidden" class="form-control" name="prev_password" value="{{user.password}}">
                                     <!-- <div class="button-pass"><button class="btn btn-secondary"><a href="#"></a>Change password</a></button></div> -->
                                 </div>
 							</div>
