--- a/templates/Dashboard/MyProfile/profile.html
+++ b/templates/Dashboard/MyProfile/profile.html
@@ -25,55 +25,48 @@
     <div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
 					<div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
 						<h3 class="mb-4">Profile Settings</h3>
+						<form action="/profile_update" method="post">
+						<input type="hidden" name="user_id" value="{{user.id}}" />
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Full Name</label>
-								  	<input type="text" class="form-control" value="">
+								  	<input type="text" class="form-control" name="name" value="{{profile.name}}">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Username</label>
-								  	<input type="text" class="form-control" value="">
+								  	<input type="text" class="form-control" name="username" value="{{user.username}}">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Email</label>
-								  	<input type="text" class="form-control" value="">
+								  	<input type="email" class="form-control" name="email" value="{{profile.email}}">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Phone number</label>
-								  	<input type="text" class="form-control" value="">
+								  	<input type="text" class="form-control" name="phone_number" value="{{profile.phone_number}}">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
 								  	<label>Address</label>
-								  	<input type="text" class="form-control" value="">
+								  	<input type="text" class="form-control" name="address" value="{{profile.address}}">
 								</div>
 							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-								  	<label>Password</label>
-								  	<input type="password" class="form-control" value="">
-                                    <div class="button-pass"><button class="btn btn-secondary"><a href="#"></a>Change password</a></button></div>
-                                </div>
-							</div>
-							<!-- <div class="col-md-12">
-								<div class="form-group">
-								  	<label>Bio</label>
-									<textarea class="form-control" rows="4"></textarea>
-								</div>
-							</div> -->
 						</div>
                         
-						<div class="submit">
-							<button class="btn btn-dark update-btn">Update</button>
+						<div class="d-flex align-items-center mt-3">
+							<div class="mr-3">
+								<button class="btn btn-dark update-btn">Update</button>
+							</div>
+							<a href="/change_pw" class="btn btn-secondary">Go to Change password</a>
 						</div>
+						</form>
 					</div>
     
     
