--- a/templates/Dashboard/StaffInfo/staff_add.html
+++ b/templates/Dashboard/StaffInfo/staff_add.html
@@ -30,37 +30,37 @@
 								<div class="col-md-6">
 									<div class="form-group">
 										<label>Full Name</label>
-										<input type="text" class="form-control" name="name" value="">
+										<input type="text" class="form-control" name="name" value="" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<label>Username</label>
-										<input type="text" class="form-control" name="username" value="">
+										<input type="text" class="form-control" name="username" value="" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<label>Email</label>
-										<input type="text" class="form-control" name="email" value="">
+										<input type="text" class="form-control" name="email" value="" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<label>Phone number</label>
-										<input type="text" class="form-control" name="phone_number" value="">
+										<input type="text" class="form-control" name="phone_number" value="" required>
 									</div>
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
 										<label>Address</label>
-										<input type="text" class="form-control" name="address" value="">
+										<input type="text" class="form-control" name="address" value="" required>
 									</div>
 								</div>
 								<div class="col-md-6">
 									<div class="form-group">
 										<label>Password</label>
-										<input type="password" class="form-control" name="password" value="">
+										<input type="password" class="form-control" name="password" value="" required>
 									</div>
 								</div>
 								<!-- <div class="col-md-12">
