--- a/templates/Dashboard/StaffInfo/staff_list.html
+++ b/templates/Dashboard/StaffInfo/staff_list.html
@@ -25,7 +25,7 @@
         <div class="table_header">
           <p>Staff Info</p>
           <div>
-            <button class="add_new button"><a href="#">+ Add Staff</a></button>
+            <button class="add_new button"><a href="/staff_add">+ Add Staff</a></button>
           </div>
         </div>
 
@@ -43,7 +43,7 @@
               </tr>
             </thead>
 
-            {% for staff in jinja_staff %}
+            {% for staff in staffs %}
             <tbody>
               <tr>
                 <td>{{ staff.user_id }}</td>
@@ -57,10 +57,10 @@
                 <td>{{ staff.email }}</td>
                 <td>{{ staff.address }}</td>
                 <td>
-                  <a href="/staff_edit?user_id={{customer.user_id}}"
+                  <a href="/staff_edit?user_id={{staff.user_id}}"
                     ><i class="fa-solid fa-pen-to-square"></i
                   ></a>
-                  <a href="/staff_delete?user_id={{customer.user_id}}"
+                  <a href="/staff_delete?user_id={{staff.user_id}}"
                     ><i class="fa-solid fa-trash"></i
                   ></a>
                 </td>
