input box type change and added cardetail mark

--- a/templates/Cars/carsdetail.html
+++ b/templates/Cars/carsdetail.html
@@ -33,7 +33,7 @@
                 {{ car.description }}
               </p>
           
-              <p><b class="price">{{ car.rental_per_day }}</b><b class="price-detail">/per day</b></p>
+              <p><b class="price">${{ car.rental_per_day }}</b><b class="price-detail">/per day</b></p>
               <div class="car-detail">
           
                 <p><i class="fa-regular fa-clipboard"></i><b>   Registration number : </b>{{ car.registration_number }}</p>
