--- a/templates/Dashboard/StaffInfo/staff_edit.html
+++ b/templates/Dashboard/StaffInfo/staff_edit.html
@@ -43,7 +43,7 @@
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Email</label>
-								  	<input type="text" class="form-control" name = "email" value="{{staff.email}}" required>
+								  	<input type="email" class="form-control" name = "email" value="{{staff.email}}" required>
 								</div>
 							</div>
 							<div class="col-md-6">
