--- a/templates/Dashboard/CarInfo/dash_cars.html
+++ b/templates/Dashboard/CarInfo/dash_cars.html
@@ -62,13 +62,17 @@
                 <td>{{ car.seating_capacity }}</td>
                 <td>{{ car.rental_per_day }}</td>
                 <td>
-                  <a
-                    href="/dash_car_edit?id={{car.id}}"
+                  <a href="/dash_car_edit?id={{car.id}}"
                     ><i class="fa-solid fa-pen-to-square"></i
                   ></a>
-                  <form action="/dash_car_delete" method="get" class="icon-button-form" onsubmit="return confirm('Are you really going to delete it?')">
+                  <form
+                    action="/dash_car_delete"
+                    method="get"
+                    class="icon-button-form"
+                    onsubmit="return confirm('Are you really going to delete it?')"
+                  >
                     <input type="hidden" name="id" value="{{car.id}}" />
-                    <button><i class="fa-solid fa-trash"></i></button>
+                    <a><i class="fa-solid fa-trash"></i></a>
                   </form>
                 </td>
               </tr>
